# moe_compress

./: .gitignore
audit/: AUDIT_PROMPT.md  INSTRUCTIONS_AUDIT_MAX_QUALITY.txt
knowledge_distillation_recovery/kdr/: .pre-commit-config.yaml  HANDOVER.md  README.md  pyproject.toml
knowledge_distillation_recovery/kdr/.req/: config.toml
knowledge_distillation_recovery/kdr/configs/: zaya1_8b_bf16.yaml  zaya1_8b_bf16_recovery.yaml  zaya1_8b_bf16_smoke200.yaml  zaya1_8b_da_qad_nvfp4_int4kv.yaml  zaya1_8b_da_qad_profileJ_gguf.yaml
knowledge_distillation_recovery/kdr/docker/: README.md  bootstrap.sh
knowledge_distillation_recovery/kdr/docs/: PROFILEJ_STRATEGY.md
knowledge_distillation_recovery/kdr/ds_configs/: zero3_offload_optim.json
knowledge_distillation_recovery/kdr/requirements/hlr/: HLR-0002.md  HLR-0004.md  HLR-0005.md  HLR-0006.md  HLR-0009.md  HLR-0010.md  HLR-0012.md  HLR-0013.md  HLR-0014.md  HLR-0015.md  HLR-0016.md  HLR-0017.md  HLR-0018.md  HLR-0019.md  HLR-0020.md  HLR-0021.md
knowledge_distillation_recovery/kdr/requirements/llr/: LLR-0001.md  LLR-0002.md  LLR-0003.md  LLR-0004.md  LLR-0005.md  LLR-0006.md  LLR-0007.md  LLR-0008.md  LLR-0009.md  LLR-0010.md  LLR-0011.md  LLR-0012.md  LLR-0013.md  LLR-0014.md  LLR-0015.md  LLR-0016.md  LLR-0017.md  LLR-0018.md  LLR-0019.md  LLR-0020.md  LLR-0021.md  LLR-0022.md  LLR-0023.md  LLR-0024.md  LLR-0025.md  LLR-0026.md  LLR-0027.md  LLR-0028.md  LLR-0029.md  LLR-0030.md  LLR-0031.md  LLR-0032.md  LLR-0033.md  LLR-0034.md  LLR-0035.md  LLR-0036.md  LLR-0037.md  LLR-0038.md  LLR-0039.md  LLR-0040.md  (+19 more)
knowledge_distillation_recovery/kdr/src/kdr/: __init__.py  config.py  kd_loss.py  modes.py
knowledge_distillation_recovery/kdr/src/kdr/adapters/: __init__.py  base.py  router_replay.py  zaya1_8b.py
knowledge_distillation_recovery/kdr/src/kdr/cli/: __init__.py  train.py
knowledge_distillation_recovery/kdr/src/kdr/eval/: __init__.py  quick.py
knowledge_distillation_recovery/kdr/src/kdr/io/: __init__.py  resume.py  run_id.py  save.py
knowledge_distillation_recovery/kdr/src/kdr/quant/: __init__.py  factory.py  interface.py  specs.py
knowledge_distillation_recovery/kdr/src/kdr/quant/modelopt_backend/: __init__.py  backend.py  config_map.py  feature_matrix.py
knowledge_distillation_recovery/kdr/src/kdr/quant/native_backend/: __init__.py  backend.py  gguf_codebooks.py  ste_simulators.py
knowledge_distillation_recovery/kdr/src/kdr/tools/: __init__.py  kdr_to_gguf.py
knowledge_distillation_recovery/kdr/src/kdr/training/: __init__.py  loop.py  optim.py  zero3_init.py
knowledge_distillation_recovery/kdr/tests/: conftest.py  test_adapter_attn.py  test_cli.py  test_config.py  test_eval_device_placement.py  test_eval_quick.py  test_gguf_codebooks_unpack.py  test_iq2_xs_bf16_argmin.py  test_kdr_to_gguf.py  test_kld_loss.py  test_kld_parity.py  test_loop_cadence.py  test_loop_device_placement.py  test_loop_dispatch.py  test_modes.py  test_native_dispatch.py  test_optim.py  test_profile_j_config.py  test_quant_factory.py  test_resume_hub.py  test_router_replay.py  test_run_id.py  test_save_async.py  test_save_kdr_artifact.py  test_save_mixed_spec.py  test_save_resume.py  test_specs.py  test_strict_typing.py  test_zaya1_adapter.py  test_zero3_init.py
knowledge_distillation_recovery/kdr/tests/property/: test_iq2xs_tile_equivalence.py  test_native_parametrizations.py  test_ste_simulators.py
knowledge_distillation_recovery/kdr/tools/: inspect_shapes.py
knowledge_distillation_recovery/structural_recovery/: README.md  pyproject.toml  requirements.txt
knowledge_distillation_recovery/structural_recovery/configs/: qwen36_35b_a3b_chapter1_light.yaml  qwen36_35b_a3b_chapter1_smoke.yaml
knowledge_distillation_recovery/structural_recovery/hf_jobs/: entrypoint.py  submit.sh
knowledge_distillation_recovery/structural_recovery/src/structural_recovery/: __init__.py  distillation.py  eval_quick.py  run_recovery.py  teacher_correction.py
knowledge_distillation_recovery/structural_recovery/tests/: conftest.py  test_defensive.py  test_kld_loss.py  test_param_groups.py  test_resume.py
max_quality/: ALGORITHM_REFERENCE.md  README.md  requirements.txt
tasks/: AUDIT_CALIB_RESUME_SPOT_EVICTION.md  CALIBRATION_MIX_V2_DESIGN.md  CALIBRATION_MIX_V2_PLAN.md  HCSMOE_UPSTREAM_ALIGNMENT_AUDIT.md  L1_FOR_SC_PLAN.md  MOE_COMPRESS_REPORT.md  MOE_PRUNER_UPSTREAM_ALIGNMENT_AUDIT.md  PLAN_CALIB_H1_H2_FSYNC_RNG.md  PLAN_CALIB_H1_H2_durability.md  PLAN_DISTILL_OPT.md  PLAN_GATE_LOGIT_ONLINE.md  PLAN_MOE_PRUNER_CE_TERM.md  PLAN_OPT_B1_perm_cache_write.md  PLAN_OPT_B2_bf16_weighted_merge.md  PLAN_OPT_B3_vectorize_argpartition.md  PLAN_OPT_B4_hoist_build_banks.md  PLAN_PLUGIN_08_s1_dp.md  (+34 more)
(+545 files in other folders)
