[project]
name = "structural_recovery"
version = "0.1.0"
description = "Knowledge Distillation Recovery — Chapter 1: Logit-only forward KLD distillation for the max_quality compressed Qwen3.6-35B-A3B."
requires-python = ">=3.10"
dependencies = [
    # max_quality provides shared utils (model_io.load_compressed_model,
    # calibration.spec_from_config, activation_hooks). Editable install so
    # upstream fixes flow through.
    "moe_compress @ file:///home/lucas/ai/moe_compress/max_quality",
    "torch>=2.5.0,<2.11.0",
    "transformers>=4.57.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.5",
    "huggingface_hub>=0.26.0",
    "bitsandbytes>=0.44.0",
    "deepspeed>=0.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
